Fix FuseConfiguration builder to run with jdk17